2007-04-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/src/clockgettime.c: #ifdef CLOCK_MONOTONIC the
	  CLOCK_MONOTONIC case.
	* score/inline/rtems/score/tod.inl: Include <sys/time.h>.

2007-04-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/Makefile.am: Cosmetics.
	* configure.ac: Add AM_CONDITIONAL(HAS_PTHREADS).
	* httpd/Makefile.am: Use HAS_PTHREADS instead of LIBPOSIX.

2007-04-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/Makefile.am, wrapup/Makefile.am, configure.ac: Rename
	  AM_CONDITIONAL(HAS_POSIX) into LIBPOSIX.
	* posix/src/clockgettime.c, posix/src/clocksettime.c: Don't include 
	  rtems/posix/time.h.
	* posix/src/nanosleep.c: Include rtems/score/timespec.h instead of
	  rtems/posix/time.h.
	* score/include/rtems/score/object.h: Use size_t for byte sizes.

2007-04-12	Joel Sherrill <joel@OARcorp.com>

	* itron/src/rsm_tsk.c: Correct error returned.

2007-04-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* include/rtems/pci.h: Added device ID for MOTOROLA_HAWK

2007-04-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/newlibc.c: Add __ATTRIBUTE_IMPURE_PTR__ 
	(Fixes "relocation truncated to fit: R_MIPS_GPREL16" against
	_impure_ptr bug).
	Fix abuse of _REENT_INIT().

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* itron/src/itrontime.c: Fix typo.
	* score/include/rtems/score/tod.h: Add TOD_TICKS_PER_SECOND macro.
	* score/src/iterateoverthreads.c: Safely take NULL as argument.
	* score/src/threaddispatch.c: Formatting.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* posix/Makefile.am: Fix formatting.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* posix/Makefile.am, posix/include/rtems/posix/time.h,
	posix/src/adjtime.c, posix/src/alarm.c, posix/src/clockgetres.c,
	posix/src/condtimedwait.c, posix/src/mqueuetimedreceive.c,
	posix/src/mqueuetimedsend.c, posix/src/mutextimedlock.c,
	posix/src/nanosleep.c, posix/src/posixtimespecabsolutetimeout.c,
	posix/src/pthread.c, posix/src/pthreadcreate.c,